# ADF-ingestion-API

./: .gitignore  pyproject.toml
.github/workflows/: ci_cd.yml
adf/dataset/: adv_gen2_ds.json  adv_http_ds.json  az_adlsgen2.json  ds_azsql_inc.json
adf/factory/: valaxy-adf.json
adf/linkedService/: AzureDataLakeStorage2.json  AzureDatabricks1.json  adv_gen2.json  az_adls_gen2.json  az_kv.json  ds_azsql_inc.json  git_http.json
adf/pipeline/: Incremental.json
databricks/notebooks/: adventure_work.py
dataset/: get_config_parameter.json
factory/: my-azure-data-engineer-project.json
landing_files/: git.json
linkedService/: adl_gen2.json  adl_gen2_ds.json  githubingestion.json
pipeline/: API_data_ingestion_github.json
src/adventure_works/: main.py
src/adventure_works/bronze/: __init__.py
src/adventure_works/data_quality/: __init__.py
src/adventure_works/gold/: __init__.py
src/adventure_works/resources/configs/dev/: config.yaml
src/adventure_works/silver/: __init__.py
src/adventure_works/utils/: __init__.py  file.py  globals.py
valaxy-adf/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
valaxy-adf/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_master.json
